--- a/TalksPublications/MidcurveNN_LaTeX/midcurvellm_intro.tex
+++ b/TalksPublications/MidcurveNN_LaTeX/midcurvellm_intro.tex
@@ -7,6 +7,18 @@ Can Large Language Models ``learn'' the dimension reduction transformation?
 \end{center}	
 \end{frame}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}[fragile]\frametitle{Phase II}
+
+Text to Text Transformation Learning:
+
+\begin{itemize}
+\item Geometric Representation: A text-based representation of the geometry/graph/network will be explored to leverage Natural Language Processing (NLP) techniques.
+\item Existing Methods: The paper (Fatemi, Halcrow, and Bryan 2023) surveys several text-based representations for graph data, but none appear specifically suited for geometric shapes.
+\item Proposed Approach: A geometry representation similar to 2D Boundary Representation (B-rep) will be utilized, adapting the concept from 3D to 2D.
+\end{itemize}	
+
+\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[fragile]\frametitle{Few Shots Prompt}
@@ -86,4 +98,19 @@ All of the above have failed. Even latest (Oct 2023), the results are:
 \item \lstinline|Hugging Chat: [((12.5, 0), (12.5, 22.5)), ((12.5, 22.5), (25.0, 22.5)), ((25.0, 22.5), (25.0, 25.0))]: a bit wrong on the last line|
 \item \lstinline|GPT-4: [((12.5,0), (12.5,22.5)), ((12.5,22.5),(0,22.5)), ((12.5,22.5),(25.0,22.5))] just change in sequence of lines, and that's inconsequential, so the answer is correct.|
 \end{itemize}	
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}[fragile]\frametitle{Interpretation}
+
+LLMs by an large seem to have failed for such simple shapes.
+
+There could be two prominent reasons:
+
+\begin{itemize}
+\item The prompt design was not effective and could be improved upon.
+\item The LLM model itself is not able to learn the pattern and predict well.
+\end{itemize}	
+
+The current geometry representation as a sequence of lines, has limitations. Trying to look for a good representation to store geometry/graph/network as text so that NLP (Natural Language Techniques) can be applied.
 \end{frame}
