--- a/TalksPublications/MidcurveNN_LaTeX/midcurvellm_slides_content.tex
+++ b/TalksPublications/MidcurveNN_LaTeX/midcurvellm_slides_content.tex
@@ -1,6 +1,9 @@
 \section[Intro]{Introduction to Midcurve}
 \input{midcurve_intro}
 
+\section[Impl]{Implementation to Midcurve}
+\input{midcurve_impl}
+
 \section[NN]{Introduction to Midcurve Neural Networks}
 \input{midcurvenn_intro}
 
