--- a/TalksPublications/MidcurveNN_LaTeX/midcurvenn_impl.tex
+++ b/TalksPublications/MidcurveNN_LaTeX/midcurvenn_impl.tex
@@ -1,4 +1,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}[fragile]\frametitle{Phase I}
+
+Image to Image Transformation Learning:
+
+\begin{itemize}
+\item Img2Img: This phase focuses on learning image-to-image transformation using fixed-size $100 \times 100$ bitmaps.
+\item Data Augmentation: The training data will be augmented by scaling, rotating, and translating both input and output shapes within the fixed size.
+\item Network Architecture: An Encoder-Decoder network, specifically Semantic Segmentation or Pix2Pix, will be employed for image-based dimension reduction.
+\end{itemize}	
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[fragile]\frametitle{}
 \begin{center}
 {\Large Data Preparation}
