Added midcurvellm deck

--- a/TalksPublications/Midcurve_LaTeX/midcurvellm_impl.tex
+++ b/TalksPublications/Midcurve_LaTeX/midcurvellm_impl.tex
@@ -173,12 +173,12 @@ Visually here is how results from different LLMs look:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[fragile]\frametitle{Interpretation}
 
-All of the above have failed. Even latest (Oct 2023), the results are:
+All of the above have failed. Even latest, the results are:
 \begin{itemize}
-\item \lstinline|llama 7B g4_0 ggml: (8, 17) & (64, 32): Wrong.|
-\item \lstinline|Bard: [((8.33,5),(8.33, 22.5)), ((8.33, 22.5), (25,22.5)), ((8.33, 22.5), (0,25))]: Wrong.|
-\item \lstinline|Hugging Chat: [((12.5, 0), (12.5, 22.5)), ((12.5, 22.5), (25.0, 22.5)), ((25.0, 22.5), (25.0, 25.0))]: a bit wrong on the last line|
-\item \lstinline|GPT-4: [((12.5,0), (12.5,22.5)), ((12.5,22.5),(0,22.5)), ((12.5,22.5),(25.0,22.5))] just change in sequence of lines, and that's inconsequential, so the answer is correct.|
+\item \lstinline|llama 7B g4_0 ggml: (8, 17) & (64, 32)|: Wrong.
+\item \lstinline|Bard: [((8.33,5),(8.33, 22.5)), ((8.33, 22.5), (25,22.5)), ((8.33, 22.5), (0,25))]|: Wrong.
+\item \lstinline|Hugging Chat: [((12.5, 0), (12.5, 22.5)), ((12.5, 22.5), (25.0, 22.5)), ((25.0, 22.5), (25.0, 25.0))]|: a bit wrong on the last line
+\item \lstinline|GPT-4: [((12.5,0), (12.5,22.5)), ((12.5,22.5),(0,22.5)), ((12.5,22.5),(25.0,22.5))]| just change in sequence of lines, and that's inconsequential, so the answer is correct.
 \end{itemize}	
 \end{frame}
 
