Made a new 2 page summary for PhD work

--- a/TalksPublications/Midsurface_LaTeX/Main_PhD_ResearchNotes_Overall.tex
+++ b/TalksPublications/Midsurface_LaTeX/Main_PhD_ResearchNotes_Overall.tex
@@ -1,5 +1,5 @@
 %\documentclass{report}	
-\documentclass[10pt]{article}	
+\documentclass[10pt,twocolumn]{article}	
 \usepackage[paperwidth=21cm, paperheight=29.7cm,top=10mm, bottom=10mm, left=17mm, right=12mm]{geometry} %dont use, overrides many options
 %\usepackage[figuresright]{rotating}
 \usepackage{algorithmic}
@@ -39,8 +39,8 @@
 \title{\vspace{-12mm} Computing a well-connected Midsurface} % Your article title
 
 \author{Yogesh Kulkarni%
-  \thanks{E-mail: \texttt{kulkarniyh12.mech@coep.ac.in}, Profile: \texttt{https://www.linkedin.com/in/yogeshkulkarni}, Phone: \texttt{+91 9890251406}}}
-\affil{PhD Student, Department of Mechanical Engineering, College of Engineering Pune, India.}
+  \thanks{E-mail: \texttt{yogeshkulkarni@yahoo.com}, Profile: \texttt{https://www.linkedin.com/in/yogeshkulkarni}, Phone: \texttt{+91 9890251406}}}
+%\affil{PhD Student, Department of Mechanical Engineering, College of Engineering Pune, India.}
 
 \date{} % Add a date here if you would like one to appear underneath the title block
 
@@ -49,6 +49,6 @@
 \maketitle
 
 \vspace{-12mm}
-\input{phd_researchnotes_twopager_content}
+\input{phd_researchnotes_overall_content}
 
 \end{document}
