Added NN LLM combo

--- a/publications/Midcurve_LaTeX/midcurvellm_slides_content.tex
+++ b/publications/Midcurve_LaTeX/midcurvellm_slides_content.tex
@@ -1,11 +1,11 @@
 \section[Midcurve]{Introduction to Midcurve}
 \input{midcurve_intro}
 
-\section[NN]{Introduction to Midcurve Neural Networks}
-\input{midcurvenn_intro}
+% \section[NN]{Introduction to Midcurve Neural Networks}
+% \input{midcurvenn_intro}
 
-\section[NNIMPL]{Implementation of Midcurve Neural Networks}
-\input{midcurvenn_impl}
+% \section[NNIMPL]{Implementation of Midcurve Neural Networks}
+% \input{midcurvenn_impl}
 
 \section[LLMIMPL]{Implementation of Midcurve LLM}
 \input{midcurvellm_impl}
