--- a/publications/Midcurve_LaTeX/Main_MidcurveNNLLM_Presentation.tex
+++ b/publications/Midcurve_LaTeX/Main_MidcurveNNLLM_Presentation.tex
@@ -14,11 +14,8 @@
 	
 %	\input{AboutMe}
 	\input{midcurvennllm_slides_content}
-	
-	\begin{frame}[c]{}
-	Thanks ...
-	\vspace{5mm}
-	yogeshkulkarni@yahoo.com
-	\end{frame}
+	\input{nodes2024}
+	\input{tedx}
+	\input{thanks}
 
 \end{document}
