--- a/publications/Midcurve_LaTeX/Main_Midcurve_CheatSheet.tex
+++ b/publications/Midcurve_LaTeX/Main_Midcurve_CheatSheet.tex
@@ -5,11 +5,11 @@
 
 
 \begin{center}
-\Large{\textbf{MindcurveNN: Geometric Dimension Reduction using Neural Networks\\ Yogesh Haribhau Kulkarni}}  
+\Large{\textbf{Computing Midcurve of a Thin Polygon using Neural Networks}}  
 \end{center}
 
 \begin{multicols}{2}
-\input{seminar_midcurve_ann_content}
+\input{seminar_midcurve_content}
 \end{multicols}
 
 \rule{\linewidth}{0.25pt}
