--- a/publications/Midcurve_LaTeX/seminar_midcurve_content.tex
+++ b/publications/Midcurve_LaTeX/seminar_midcurve_content.tex
@@ -4,8 +4,10 @@
 
 \section[Impl]{Implementation}
 \input{midcurve_impl_ann}
+\input{midcurve_impl_cnn}
+\input{midcurve_impl_llm}
 
 \section[End]{The End}
 \input{midcurve_conclusion_ann}
+\input{midcurve_conclusion_llm}
 \input{midcurve_refs}
-
