--- a/publications/Midcurve_LaTeX/Main_Midcurve_Presentation.tex
+++ b/publications/Midcurve_LaTeX/Main_Midcurve_Presentation.tex
@@ -1,7 +1,7 @@
 \documentclass[xcolor=dvipsnames,compress,t,pdf,9pt]{beamer}
 \input{template_presentation}
 \graphicspath{{images/}}
-\title[\insertframenumber /\inserttotalframenumber]{Computing Midcurve of a Thin Polygon for Mechanical Engineering}
+\title[\insertframenumber /\inserttotalframenumber]{Computing Midcurve of a Thin Polygon using Neural Networks}
 % \subtitle[]{Yogesh Haribhau Kulkarni}
 
 
@@ -11,7 +11,7 @@
 	\titlepage
 	\end{frame}
 	
-	\input{seminar_midcurve_annllm_content}
+	\input{seminar_midcurve_content}
 
 	\input{thanks}
 
