Added Midcurve NN deck

--- a/publications/Midcurve_LaTeX/Main_Midcurve_Presentation.tex
+++ b/publications/Midcurve_LaTeX/Main_Midcurve_Presentation.tex
@@ -1,9 +1,11 @@
 \documentclass[xcolor=dvipsnames,compress,t,pdf,9pt]{beamer}
 \input{template_presentation}
 \graphicspath{{images/}}
-\title[\insertframenumber /\inserttotalframenumber]{Computing Midcurve of a Thin Polygon using Neural Networks}
-% \subtitle[]{Yogesh Haribhau Kulkarni}
+% \title[\insertframenumber /\inserttotalframenumber]{Computing Midcurve of a Thin Polygon using Neural Networks}
+% % \subtitle[MidcurveNN]{Yogesh Haribhau Kulkarni}
 
+\title{Computing Midcurve of a Thin Polygon using Neural Networks}
+\subtitle[]{MidcurveNN}
 
 \begin{document}
 
